# circuit-calculator

./: .gitattributes  .gitignore  ARCHITECTURE.md  CMakeLists.txt  code_base_guide.md
.cache/clangd/index/: analysis_result.hpp.38193C7C2A9C0078.idx  circuitcalc.hpp.A82BB596651D0AA1.idx  dc_solver.cpp.E52AADEC023241E2.idx  dc_solver.hpp.1099E4B65CFE136D.idx  errors.hpp.89C7E4360571F1CE.idx  main.cpp.F5E1CCC839580E05.idx  matrix.cpp.E3F042E6C2C8A3DE.idx  matrix.hpp.3EEE39C93D02A646.idx  netlist.cpp.0B76425D88D2DDF0.idx  netlist.hpp.5927E5153F960853.idx  units.hpp.1814F5A8F9AFEF86.idx
apps/cli/: main.cpp
apps/wasm/: wasm_api.cpp
include/circuitcalc/: circuitcalc.hpp
include/circuitcalc/analysis/: analysis_result.hpp  dc_solver.hpp
include/circuitcalc/circuit/: element_list.hpp  elements.hpp
include/circuitcalc/core/: errors.hpp  matrix.hpp  units.hpp
include/circuitcalc/io/: json_io.hpp
include/circuitcalc/netlist/: netlist.hpp
src/analysis/: dc_solver.cpp
src/circuit/: element_list.cpp
src/core/: matrix.cpp
src/io/: json_io.cpp
src/netlist/: netlist.cpp
web/public/wasm/: circuitcalc_wasm.js  circuitcalc_wasm.wasm
web/src/: App.tsx  index.css
web/src/components/: BranchTable.tsx  ResultsPanel.tsx
web/src/editor/: ComponentShape.tsx  EditorCanvas.tsx  Palette.tsx  constants.ts  toNetlist.ts  types.ts  utils.ts
web/src/lib/: mna.ts  solutionSteps.ts  solver.ts
web/src/types/: circuit.ts  thevenin.ts
